Added Evaluation class Added Evaluation tests

--- a/Unit Tests/Unit Tests.vcxproj
+++ b/Unit Tests/Unit Tests.vcxproj
@@ -166,6 +166,7 @@
     <ClCompile Include="UnitTests.cpp" />
     <ClCompile Include="FenParsingTests.cpp" />
     <ClCompile Include="MoveGenerationTests.cpp" />
+    <ClCompile Include="EvaluationTests.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
