--- a/Unit Tests/Unit Tests.vcxproj.filters
+++ b/Unit Tests/Unit Tests.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="EvaluationTests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SearchTests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
