--- a/better chess bot/better chess bot.vcxproj
+++ b/better chess bot/better chess bot.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="better chess bot.cpp" />
     <ClCompile Include="Bitboard.cpp" />
     <ClCompile Include="Evaluation.cpp" />
+    <ClCompile Include="Search.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameState.cpp" />
     <ClCompile Include="Move.cpp" />
@@ -152,6 +153,7 @@
     <ClInclude Include="DeBruijn.h" />
     <ClInclude Include="Enums.h" />
     <ClInclude Include="Evaluation.h" />
+    <ClInclude Include="Search.h" />
     <ClInclude Include="Evaluation structure.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameState.h" />
